Se implementaron alertas en los grupos